--- a/wcd/website/templates/home.html
+++ b/wcd/website/templates/home.html
@@ -6,31 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Website Analysis</title>
     <style>
+        @font-face {
+            font-family: Montserrat-Regular;
+            src: url('../fonts/montserrat/static/Montserrat-Regular.ttf'); 
+        }
+        @font-face {
+            font-family: Montserrat-Bold;
+            src: url('../fonts/montserrat/static/Montserrat-Bold.ttf'); 
+        }
+  
+        @font-face {
+            font-family: Montserrat-ExtraBold;
+            src: url('../fonts/montserrat/static/Montserrat-ExtraBold.ttf'); 
+        }
+  
+        @font-face {
+            font-family: Montserrat-Medium;
+            src: url('../fonts/montserrat/static/Montserrat-Medium.ttf'); 
+        }
+
         body {
-            font-family: 'Poppins', Arial, sans-serif;
+            font-family: 'Montserrat-Regular', sans-serif;
+            background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
             align-items: center;
             height: 100vh;
-            background: url("{% static 'images/bgimage2.jpg' %}") no-repeat center center fixed;
             background-size: cover;
-            background-color: #726e68a3; 
         }
 
         .container {
             text-align: center;
-            background-color: #beccfc;
+            background-image: linear-gradient(120deg, #b585e2 0%, #d284e1 100%);
             padding: 30px;
             border-radius: 18px;
-            border-color: #050505;
+            border: 4px solid #050505; /* Thicker border (4px) */
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
             max-width: 650px;
             opacity: 0;
             transform: translateY(50px); /* Move down by 50px initially */
             animation: fadeInUp 1.5s ease-out forwards; /* 1.5s animation */
-            margin-right: 50px;
+            margin-right: 0 auto;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         @keyframes fadeInUp {
@@ -50,7 +69,7 @@
             font-weight: bold;
             color: #171917; 
             margin-bottom: 20px;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Montserrat-Bold', sans-serif;
             letter-spacing: 1.5px;
         }
 
@@ -58,30 +77,32 @@
             font-size: 20px;
             color: z#484849;
             margin-bottom: 50px;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .analyze-button {
             padding: 15px 40px;
+            font-family: 'Montserrat-Regular', sans-serif;
             font-size: 22px;
-            color: #131212;
-            background: linear-gradient(90deg, #4ca9d4, #4258b9); 
+            color: white;
+            background: #212529; 
             border: none;
             border-radius: 10px;
             text-decoration: none;
             cursor: pointer;
             transition: all 0.3s ease;
             display: inline-block;
-            font-family: 'Courier New', Courier, monospace;
         }
 
         .analyze-button:hover {
-            background: linear-gradient(90deg, #2f6cce, #5b7acf);
-            box-shadow: 0 4px 15px rgba(33, 39, 214, 0.5);
+            background-color: #484849;
+            font-family: 'Montserrat-Regular', sans-serif;
+    
         }
 
         .info-section {
             margin-top: 40px;
+            font-family: 'Montserrat-Regular', sans-serif;
             text-align: left;
         }
 
@@ -89,7 +110,7 @@
             font-size: 32px;
             color: #050505; 
             margin-bottom: 20px;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .info-section ul {
@@ -101,7 +122,7 @@
             font-size: 20px;
             color: #494848;
             margin-bottom: 10px;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         
@@ -116,7 +137,7 @@
 
     {% if user.is_authenticated %}
         <p>You are logged in as {{ user.username }}.</p>
-        <a href="/analyze/" class="analyze-button"><b>Start Analysis</b></a>
+        <a href="/analyze/" class="analyze-button">Start Analysis</a>
         <a href="{% url 'logout_view' %}" class="analyze-button">Logout</a> 
     {% else %}
         <p>Please log in to continue.</p>
@@ -138,5 +159,3 @@
 
 </body>
 </html>
-
-
