--- a/wcd/website/templates/recommendations.html
+++ b/wcd/website/templates/recommendations.html
@@ -16,7 +16,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #4a90e2, #4a65d4); /* Gradient background */
+            background: linear-gradient(135deg, #4a90e2, #6e49c6); /* Gradient background */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -53,7 +53,7 @@
             margin-top: 30px;
             padding: 15px 40px;
             font-size: 18px;
-            background: linear-gradient(90deg, #4ca9d4, #4258b9);
+            background: linear-gradient(90deg, #4ca9d4, #7c49a2);
             color: #000;
             border: none;
             border-radius: 10px;
@@ -65,8 +65,8 @@
         }
 
         .back-button:hover {
-            background: linear-gradient(90deg, #2f6cce, #5b7acf);
-            box-shadow: 0 6px 20px rgba(33, 39, 214, 0.5);
+            background: linear-gradient(90deg, #7f9cca, #765bcf);
+            box-shadow: 0 6px 20px rgba(100, 104, 228, 0.5);
         }
 
     </style>
